[gd_scene load_steps=37 format=1]

[ext_resource path="res://scenes/enemies/land_monster_2/land_monster_2.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_000.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_001.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_002.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_003.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_004.png" type="Texture" id=6]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_005.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_006.png" type="Texture" id=8]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_007.png" type="Texture" id=9]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_008.png" type="Texture" id=10]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_009.png" type="Texture" id=11]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_010.png" type="Texture" id=12]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_011.png" type="Texture" id=13]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_012.png" type="Texture" id=14]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_013.png" type="Texture" id=15]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_014.png" type="Texture" id=16]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_015.png" type="Texture" id=17]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_016.png" type="Texture" id=18]
[ext_resource path="res://scenes/enemies/land_monster_2/Walking/Walking_017.png" type="Texture" id=19]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_000.png" type="Texture" id=20]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_001.png" type="Texture" id=21]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_002.png" type="Texture" id=22]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_003.png" type="Texture" id=23]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_004.png" type="Texture" id=24]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_005.png" type="Texture" id=25]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_006.png" type="Texture" id=26]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_007.png" type="Texture" id=27]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_008.png" type="Texture" id=28]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_009.png" type="Texture" id=29]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_010.png" type="Texture" id=30]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_011.png" type="Texture" id=31]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_012.png" type="Texture" id=32]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_013.png" type="Texture" id=33]
[ext_resource path="res://scenes/enemies/land_monster_2/Dying/Dying_014.png" type="Texture" id=34]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 15.7432
height = 20.0

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "dying",
"speed": 20.0
} ]

[node name="RigidBody2D" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.604279, 3.66556 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="enabler" type="VisibilityEnabler2D" parent="."]

transform/pos = Vector2( -5.93369, 15.3712 )
transform/scale = Vector2( 17.7191, 10.535 )
rect = Rect2( -10, -10, 20, 20 )
enabler/pause_animations = false
enabler/freeze_bodies = false
enabler/pause_particles = false
enabler/pause_animated_sprites = false
enabler/process_parent = false
enabler/fixed_process_parent = false

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "walk"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.604279, 3.66556 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="raycast_left" type="RayCast2D" parent="."]

transform/pos = Vector2( -41.5728, 3.23073 )
transform/scale = Vector2( 1.25, 1.26 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="raycast_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 39.5413, 0.548519 )
transform/scale = Vector2( 1.25, 1.26 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="raycast_back" type="RayCast2D" parent="."]

transform/pos = Vector2( -27.1049, -0.146797 )
transform/scale = Vector2( 1.38303, 1.29303 )
enabled = true
cast_to = Vector2( 50, 0 )
layer_mask = 1
type_mask = 15


